レギュレーションメニュー追加

--- a/TheOtherRoles/TheOtherRoles.csproj
+++ b/TheOtherRoles/TheOtherRoles.csproj
@@ -54,5 +54,6 @@
 
     <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
         <Exec Command="py &quot;$(SolutionDir)stringsToJson.py&quot;" />
+        <Exec Command="copy &quot;$(SolutionDir)UnityAssets\HaomingAssets\AssetBundles\StandaloneWindows\haomingassets&quot; &quot;$(SolutionDir)TheOtherRoles\Resources\AssetBundle\haomingassets&quot;" />
     </Target>
 </Project>
