--- a/TheOtherRoles/TheOtherRoles.csproj
+++ b/TheOtherRoles/TheOtherRoles.csproj
@@ -42,7 +42,8 @@
     </ItemGroup>
 
     <ItemGroup>
-		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.10.18" />
+		<Reference Include="$(AmongUs)/BepInEx/core/*.dll" />
+        <Reference Include="$(AmongUs)/BepInEx/unhollowed/*.dll" />
         <PackageReference Include="BepInEx.IL2CPP" Version="6.0.0-be.570" />
         <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="1.1.1" />
     </ItemGroup>
