.gitlab-ci.ymlを修正

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ build:
     - ln -s /usr/bin/python3 /usr/bin/py
     - sed -i "s/999.999.999/${VERSION}/" TheOtherRoles/TheOtherRoles.csproj
     - sed -i "s/999.999.999/${VERSION}/" TheOtherRoles/Main.cs
-    - dotnet restore --packages $NUGET_PACKAGES_DIRECTORY
+    - dotnet restore --packages $NUGET_PACKAGES_DIRECTORY /p:GamePlatform=Steam
     - dotnet build --configuration Release --no-restore /p:GamePlatform=Steam
     - mv ${SOURCE_CODE_PATH}/obj/Release/netstandard2.1/TheOtherRolesGM.dll ${CI_PROJECT_DIR}
   artifacts:
