assetを使うように変更

--- a/TheOtherRoles/TheOtherRoles.csproj
+++ b/TheOtherRoles/TheOtherRoles.csproj
@@ -63,5 +63,10 @@
             DestinationFolder="$(SolutionDir)TheOtherRoles\Resources\AssetBundle\"
             ContinueOnError="true"
         />
+		<Copy
+            SourceFiles="$(SolutionDir)UnityAssets\DevAssets\AssetBundles\StandaloneWindows\devassets"
+            DestinationFolder="$(SolutionDir)TheOtherRoles\Resources\AssetBundle\"
+            ContinueOnError="true"
+        />
     </Target>
 </Project>
